--- a/menu.html
+++ b/menu.html
@@ -72,7 +72,46 @@
       </div>
 
       <div class="titolo-menu-ovale" style="width: 18vh;">Pizze</div>
-
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
+        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
+          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
+          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bufala.jpg"><div class="nome-prezzo"> <div class="nome-piatto">BUFALA</div><div class="prezzo">€9,00</div></div>
+          <div class="descrizione">pomodoro, mozzarella di bufala, olio evo e basilico</div>
+        </div>
+      </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
+        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
+          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
+          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bufala.jpg"><div class="nome-prezzo"> <div class="nome-piatto">BUFALA</div><div class="prezzo">€9,00</div></div>
+          <div class="descrizione">pomodoro, mozzarella di bufala, olio evo e basilico</div>
+        </div>
+      </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
+        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
+          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
+          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+        </div>
+        <div class="piatto"></div>
+      </div>
     </div>
 
     <footer>
