--- a/menu.html
+++ b/menu.html
@@ -43,72 +43,72 @@
     </div>
   </div>
     <div class="menu-container">
-      <div class="titolo-menu-ovale">Antipasti</div>
+      <div class="titolo-menu-ovale" data-translate="Appetizers" data-translateIt="Antipasti"></div>
       <div class="riga-piatti">
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/montanare.jpg"><div class="nome-prezzo"> <div class="nome-piatto">TRIS DI MONTANARINE</div><div class="prezzo">€10,00</div></div>
-        <div class="descrizione">pomodorino cotto, mozzarella e basilico genovese napoletana, pecorino e basilico ragù napoletano, grana e basilico</div>
+        <div class="descrizione" data-translate="cooked cherry tomato, mozzarella and basil, Neapolitan Genoese, pecorino and basil, Neapolitan ragù, parmesan and basil" data-translateIt="pomodorino cotto, mozzarella e basilico genovese napoletana, pecorino e basilico ragù napoletano, grana e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pizzaTegamino.webp"><div class="nome-prezzo"> <div class="nome-piatto">PIZZA AL TEGAMINO</div><div class="prezzo">€13,00</div></div>
-          <div class="descrizione">spalla cotta Capitelli, carciofini grigliati e scaglie di pecorino toscano al ginepro ragù napoletano, parmigiano e basilico genovese napoletana, carne sfilacciata pecorino e basilico</div>
+          <div class="descrizione" data-translate="cooked shoulder Capitelli, grilled artichokes and flakes of Tuscan pecorino with juniper Neapolitan ragù, parmesan and Genoese Neapolitan basil, shredded meat pecorino and basil" data-translateIt="spalla cotta Capitelli, carciofini grigliati e scaglie di pecorino toscano al ginepro ragù napoletano, parmigiano e basilico genovese napoletana, carne sfilacciata pecorino e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bomba.jpg"><div class="nome-prezzo"> <div class="nome-piatto">LA BOMBA</div><div class="prezzo">€10,00</div></div>
-          <div class="descrizione">burratina 125 gr. in doppia panatura panko, ripiena con pesto di pistacchi, su pomodorini cotti e basilico</div>
+          <div class="descrizione" data-translate="burrata 125 gr. in double panko breading, filled with pistachio pesto, on cooked cherry tomatoes and basil" data-translateIt="burratina 125 gr. in doppia panatura panko, ripiena con pesto di pistacchi, su pomodorini cotti e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/frittura.jpg"><div class="nome-prezzo"> <div class="nome-piatto">FRITTURA</div><div class="prezzo">(3pz.) €5,00 / (6pz.) €10,00</div></div>
-          <div class="descrizione">mozzarella in carrozza con panatura corn flakes frittatina di bucatini, macinato di bovino*, piselli* e besciamella crocchè di patate, provola, patate, grana e basilico</div>
+          <div class="descrizione" data-translate="mozzarella in carrozza with corn flakes breading bucatini omelette, minced beef*, peas* and béchamel potato croquettes, provola cheese, potatoes, parmesan and basil" data-translateIt="mozzarella in carrozza con panatura corn flakes frittatina di bucatini, macinato di bovino*, piselli* e besciamella crocchè di patate, provola, patate, grana e basilico"></div>
         </div>
       </div>
       <div class="riga-piatti">
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/vegetariano.jpg"><div class="nome-prezzo"> <div class="nome-piatto">PIATTO VEGETARIANO</div><div class="prezzo">€12,00</div></div>
-          <div class="descrizione">parmigiana di zucca, tortino di scarola, uvetta, pinoli e olive taggiasche gateau di patate con provola, grana e basilico</div>
+          <div class="descrizione" data-translate="pumpkin parmigiana, escarole pie, raisins, pine nuts and Taggiasche olives potato gateau with provola, parmesan and basil" data-translateIt="parmigiana di zucca, tortino di scarola, uvetta, pinoli e olive taggiasche gateau di patate con provola, grana e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/caprese.jpg"><div class="nome-prezzo"> <div class="nome-piatto">CAPRESE</div><div class="prezzo">€10,00</div></div>
-          <div class="descrizione">mozzarella di bufala da 125 gr. cuore di bue, origano, olio evo e basilico</div>
+          <div class="descrizione" data-translate="125 gr buffalo mozzarella. beef heart, oregano, extra virgin olive oil and basil" data-translateIt="mozzarella di bufala da 125 gr. cuore di bue, origano, olio evo e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/fresella.avif"><div class="nome-prezzo"> <div class="nome-piatto">LA FRESELLA</div><div class="prezzo">€12,00</div></div>
-          <div class="descrizione">ciambella di grano duro con pomodorini bocconcini di bufala 125 gr. alici di Cetara olive taggiasche, olio evo e basilico </div>
+          <div class="descrizione" data-translate="durum wheat donut with cherry tomatoes buffalo morsels 125 gr. Cetara anchovies, Taggiasca olives, extra virgin olive oil and basil" data-translateIt="ciambella di grano duro con pomodorini bocconcini di bufala 125 gr. alici di Cetara olive taggiasche, olio evo e basilico"></div>
         </div>
         <div class="piatto"></div>
       </div>
 
-      <div class="titolo-menu-ovale" style="width: 18vh;">Pizze</div>
+      <div class="titolo-menu-ovale" style="width: 18vh;" data-translate="Pizza" data-translateIt="Pizze"></div>
       <div class="riga-piatti">
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
-        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        <div class="descrizione" data-translate="tomato, garlic, extra virgin olive oil, oregano and basil" data-translateIt="pomodoro, aglio, olio evo, origano e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
-          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+          <div class="descrizione" data-translate="tomato, fior di latte, extra virgin olive oil and basil" data-translateIt="pomodoro, fior di latte, olio evo e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
-          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+          <div class="descrizione" data-translate="cooked cherry tomato, parmesan, pecorino, extra virgin olive oil and basil" data-translateIt="pomodorino cotto, parmigiano, pecorino, olio evo e basilico"></div>
         </div>
         <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bufala.jpg"><div class="nome-prezzo"> <div class="nome-piatto">BUFALA</div><div class="prezzo">€9,00</div></div>
-          <div class="descrizione">pomodoro, mozzarella di bufala, olio evo e basilico</div>
+          <div class="descrizione" data-translate="tomato, buffalo mozzarella, extra virgin olive oil and basil" data-translateIt="pomodoro, mozzarella di bufala, olio evo e basilico"></div>
         </div>
       </div>
       <div class="riga-piatti">
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
-        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/diavola.jpeg"><div class="nome-prezzo"> <div class="nome-piatto">DIAVOLA</div><div class="prezzo">€9,00</div></div>
+        <div class="descrizione" data-translate="tomato, fior di latte, Calabrian spinata, Spilinga 'nduja, extra virgin olive oil and basil" data-translateIt="pomodoro, fior di latte, spianata calabra, 'nduja di Spilinga, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
-          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/capricciosa.webp"><div class="nome-prezzo"> <div class="nome-piatto">CAPRICCIOSA</div><div class="prezzo">€10,00</div></div>
+          <div class="descrizione" data-translate="tomato, mozzarella, cooked ham, artichokes, Taggiasca olives, mushrooms, extra virgin olive oil and basil" data-translateIt="pomodoro, fior di latte, prosciutto cotto, carciofi, olive taggiasche, funghi, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
-          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/filetto.webp"><div class="nome-prezzo"> <div class="nome-piatto">FILETTO</div><div class="prezzo">€8,50</div></div>
+          <div class="descrizione" data-translate="red datterino tomatoes, fior di latte, extra virgin olive oil and basil" data-translateIt="pomodorino datterino rosso, fior di latte, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bufala.jpg"><div class="nome-prezzo"> <div class="nome-piatto">BUFALA</div><div class="prezzo">€9,00</div></div>
-          <div class="descrizione">pomodoro, mozzarella di bufala, olio evo e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/napoli.png"><div class="nome-prezzo"> <div class="nome-piatto">NAPOLI</div><div class="prezzo">€9,00</div></div>
+          <div class="descrizione" data-translate="tomato, fior di latte, Cetara anchovies, extra virgin olive oil and basil" data-translateIt="pomodoro, fior di latte, alici di Cetara, olio evo e basilico"></div>
         </div>
       </div>
       <div class="riga-piatti">
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/marinara.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARINARA</div><div class="prezzo">€6,50</div></div>
-        <div class="descrizione">pomodoro, aglio, olio evo, origano e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/ortolana.jpg"><div class="nome-prezzo"> <div class="nome-piatto">ORTOLANA</div><div class="prezzo">€9,00</div></div>
+        <div class="descrizione" data-translate="fior di latte, fried courgettes and aubergines, datterino tomatoes, extra virgin olive oil and basil" data-translateIt="fior di latte, zucchine e melanzane fritte, pomodorino datterino, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/margherita.webp"><div class="nome-prezzo"> <div class="nome-piatto">MARGHERITA</div><div class="prezzo">€7,50</div></div>
-          <div class="descrizione">pomodoro, fior di latte, olio evo e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/4formaggi.webp"><div class="nome-prezzo"> <div class="nome-piatto">4 FORMAGGI DI BUFALA</div><div class="prezzo">€10,00</div></div>
+          <div class="descrizione" data-translate="buffalo mozzarella, buffalo ricotta, buffalo caciocavallo, buffalo blue, extra virgin olive oil and basil" data-translateIt="mozzarella di bufala, ricotta di bufala, caciocavallo di bufala, blu di bufala, olio evo e basilico"></div>
         </div>
-        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cospacca.jpg"><div class="nome-prezzo"> <div class="nome-piatto">COSPACCA</div><div class="prezzo">€8,00</div></div>
-          <div class="descrizione">pomodorino cotto, parmigiano, pecorino, olio evo e basilico</div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/salsicciafriarielli.png"><div class="nome-prezzo"> <div class="nome-piatto">SALSICCIA E FRIARIELLI</div><div class="prezzo">€11,00</div></div>
+          <div class="descrizione" data-translate="provola, sausage and broccoli" data-translateIt="provola, salsiccia e friarielli"></div>
         </div>
         <div class="piatto"></div>
       </div>
