--- a/menu.html
+++ b/menu.html
@@ -112,6 +112,38 @@
         </div>
         <div class="piatto"></div>
       </div>
+
+      <div class="nome-prezzo"> <div style="width: 50%; height: 23vh; padding-bottom: 0;"><div class="titolo-menu-ovale" style="width: 20vh;" data-translate="Calzoni" data-translateIt="Calzoni"></div></div>  <div style="width: 50%; height: 23vh; padding-bottom: 0;"><div class="titolo-menu-ovale" style="width: 35vh;" data-translate="Fried calzoni" data-translateIt="Calzoni fritti"></div></div> </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/calzone.jpg"><div class="nome-prezzo"> <div class="nome-piatto">RIPIENO</div><div class="prezzo">€10,00</div></div>
+        <div class="descrizione" data-translate="tomato, fior di latte, ricotta, pepper, Napoli salami, extra virgin olive oil and basil" data-translateIt="pomodoro, fior di latte, ricotta, pepe, salame Napoli, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/calzonescarola.jpg"><div class="nome-prezzo"> <div class="nome-piatto">RIPIENO CON SCAROLA</div><div class="prezzo">€10,00</div></div>
+          <div class="descrizione" data-translate="provola, raw escarole, Cetara anchovies, raisins, Taggiasca olives, extra virgin olive oil" data-translateIt="provola, scarola a crudo, alici di Cetara, uvetta, olive taggiasche, olio evo"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/calzonefritto.webp"><div class="nome-prezzo"> <div class="nome-piatto">CLASSICA NAPOLETANA</div><div class="prezzo">€10,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, ricotta, cicoli and pepper" data-translateIt="fior di latte, ricotta, cicoli e pepe"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pugliese.jpg"><div class="nome-prezzo"> <div class="nome-piatto">PUGLIESE</div><div class="prezzo">€9,00</div></div>
+          <div class="descrizione" data-translate="tomato, mozzarella, cooked ham" data-translateIt="pomodoro, fior di latte, prosciutto cotto"></div>
+        </div>
+      </div>
+
+      <div class="titolo-menu-ovale" style="width: 40vh;" data-translate="Anonimous pizza" data-translateIt="Pizze anonime"></div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/mastoantonio.png"><div class="nome-prezzo"> <div class="nome-piatto">MASTOANTONIO</div><div class="prezzo">€11,00</div></div>
+        <div class="descrizione" data-translate="yellow cherry tomato, fior di latte, bacon, buffalo blue, extra virgin olive oil and basil" data-translateIt="pomodorino giallo, fior di latte, guanciale, blu di bufala, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/nerano.png"><div class="nome-prezzo"> <div class="nome-piatto">NERANO</div><div class="prezzo">€11,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, courgette cream, crunchy speck, out of the oven: courgette chips, extra virgin olive oil and basil" data-translateIt="fior di latte, crema di zucchine, speck croccante, fuori forno: chips di zucchine, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/b&b.png"><div class="nome-prezzo"> <div class="nome-piatto">B&B</div><div class="prezzo">€12,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, broccoli, out of the oven: Cetara anchovies, buffalo cherry tomatoes, bread flavored with colatura" data-translateIt="fior di latte, broccolo, fuori forno: alici di Cetara, ciliegino di bufala, pane aromatizzato alla colatura"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/fiocco.png"><div class="nome-prezzo"> <div class="nome-piatto">FIOCCO</div><div class="prezzo">€11,00</div></div>
+          <div class="descrizione" data-translate="mozzarella, cooked ham, cream, crushed potato, grated bread, extra virgin olive oil and basil" data-translateIt="fior di latte, prosciutto cotto, panna, patata schiacciata, pane grattugiato, olio evo e basilico"></div>
+        </div>
+      </div>
     </div>
 
     <footer>
