--- a/menu.html
+++ b/menu.html
@@ -144,8 +144,96 @@
           <div class="descrizione" data-translate="mozzarella, cooked ham, cream, crushed potato, grated bread, extra virgin olive oil and basil" data-translateIt="fior di latte, prosciutto cotto, panna, patata schiacciata, pane grattugiato, olio evo e basilico"></div>
         </div>
       </div>
-    </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/brusco.png"><div class="nome-prezzo"> <div class="nome-piatto">BRUSCO</div><div class="prezzo">€14,00</div></div>
+        <div class="descrizione" data-translate="buffalo mozzarella, out of the oven: cooked Capitelli shoulder, grilled artichokes, flakes of Tuscan pecorino with juniper, extra virgin olive oil and basil" data-translateIt="mozzarella di bufala, fuori forno: spalla cotta Capitelli, carciofi grigliati, scaglie di pecorino toscano al ginepro, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/zucca.png"><div class="nome-prezzo"> <div class="nome-piatto">ZUCCA</div><div class="prezzo">€12,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, pumpkin cream, buffalo blue, 3-cooked Capitelli bacon, extra virgin olive oil and basil" data-translateIt="fior di latte, crema di zucca,blu di bufala, pancetta Capitelli a 3 cotture, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/mortadella.png"><div class="nome-prezzo"> <div class="nome-piatto">MORTADELLA</div><div class="prezzo">€14,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, out of the oven: mortadella, potato croquettes, Apulian burratina 125g, pistachio cream" data-translateIt="fior di latte, fuori forno: mortadella, crocchè di patate, burratina pugliese 125 gr, crema di pistacchi"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/ragu.png"><div class="nome-prezzo"> <div class="nome-piatto">RAGU</div><div class="prezzo">€12,00</div></div>
+          <div class="descrizione" data-translate="provola, Neapolitan ragù emulsified with buffalo ricotta, sausage morsel, extra virgin olive oil and basil" data-translateIt="provola, ragù napoletano emulsionato con ricotta di bufala, bocconcino di salsiccia, olio evo e basilico"></div>
+        </div>
+      </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/3p.png"><div class="nome-prezzo"> <div class="nome-piatto">3P</div><div class="prezzo">€12,00</div></div>
+        <div class="descrizione" data-translate="provola, Ariccia porchetta, potato chips, lime mayonnaise and pink pepper" data-translateIt="provola, porchetta di Ariccia, patate chips, maionese lime e pepe rosa"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cebulla.png"><div class="nome-prezzo"> <div class="nome-piatto">CEBULLA</div><div class="prezzo">€11,00</div></div>
+          <div class="descrizione" data-translate="yellow cherry tomato puree, garlic, oregano, out of the oven: 125g buffalo morsel, Cetara anchovies and lemon zest" data-translateIt="passata di pomodorino giallo, aglio, origano, fuori forno: bocconcino di bufala 125 gr, alici di Cetara e zeste di limone"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/dypolla.png"><div class="nome-prezzo"> <div class="nome-piatto">DYPOLLA</div><div class="prezzo">€12,00</div></div>
+          <div class="descrizione" data-translate="fior di latte, semi-dry cherry tomatoes, caramelized red onion, sausage, Neapolitan tarallo, extra virgin olive oil and basil" data-translateIt="fior di latte, pomodorino semidry, cipolla rossa caramellata, salsiccia, tarallo napoletano, olio evo e basilico"></div>
+        </div>
+        <div class="piatto"></div>
+      </div>
 
+      <div class="titolo-menu-ovale" style="width: 20vh;" data-translate="Dessert" data-translateIt="Dessert"></div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pastiera.webp"><div class="nome-prezzo"> <div class="nome-piatto">PASTIERA NAPOLETANA</div><div class="prezzo">€6,00</div></div>
+        <div class="descrizione" data-translate="shortcrust pastry, cooked wheat, buffalo ricotta, wildflower flavouring" data-translateIt="pastafrolla, grano cotto, ricotta di bufala, aroma millefiori"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/baba.avif"><div class="nome-prezzo"> <div class="nome-piatto">BABA'</div><div class="prezzo">€6,00</div></div>
+          <div class="descrizione" data-translate="soft leavened dough with alcoholic syrup" data-translateIt="impasto soffice lievitato con bagna alcolica"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cheesecake.jpg"><div class="nome-prezzo"> <div class="nome-piatto">CHEESE CAKE</div><div class="prezzo">€6,00</div></div>
+          <div class="descrizione" data-translate="Buffalo ricotta mousse on butter biscuit filled with: berries or salted caramel or pistachio or chocolate" data-translateIt="mousse alla ricotta di bufala su biscotto al burro farcita: frutti di bosco o caramello salato o pistacchio o cioccolato"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/graffe.jpg"><div class="nome-prezzo"> <div class="nome-piatto">GRAFFETTE</div><div class="prezzo">€6,00</div></div>
+          <div class="descrizione" data-translate="freshly fried donut covered in sugar filled: Nutella or pistachio" data-translateIt="ciambella fritta al momento ricoperta di zucchero farcita: nutella o pistacchio"></div>
+        </div>
+      </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cioccobaba.jpg"><div class="nome-prezzo"> <div class="nome-piatto">CIOCCO BABA'</div><div class="prezzo">€6,00</div></div>
+        <div class="descrizione" data-translate="soft leavened dough, filled with mascarpone and dark chocolate frosting" data-translateIt="impasto soffice lievitato, ripieno al mascarpone con glassatura al cioccolato fondente"></div>
+        </div>
+        <div class="piatto"></div>
+        <div class="piatto"></div>
+        <div class="piatto"></div>
+      </div>
+
+      <div class="nome-prezzo"> <div style="width: 50%; height: 23vh; padding-bottom: 0;"><div class="titolo-menu-ovale" data-translate="Caffetteria" data-translateIt="Caffetteria"></div></div>  <div style="width: 50%; height: 23vh; padding-bottom: 0;"><div class="titolo-menu-ovale" style="width: 20vh;" data-translate="Drinks" data-translateIt="Bibite"></div></div> </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/caffe.jpg"><div class="nome-prezzo"> <div class="nome-piatto">CAFFE'/DECA</div><div class="prezzo">€2,00</div></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/orzo.jpg"><div class="nome-prezzo"> <div class="nome-piatto">ORZO</div><div class="prezzo">€2,50</div></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/acqua.png"><div class="nome-prezzo"> <div class="nome-piatto">ACQUA MINERALE SPAREA (Piemonte)</div><div class="prezzo">€2,50</div></div>
+          <div class="descrizione" data-translate="Still/Sparkling 0,75 cl." data-translateIt="Naturale/Frizzante 0,75 cl."></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/bibite.png"><div class="nome-prezzo"> <div class="nome-piatto">COCA COLA, COCA ZERO, FANTA, SPRITE</div><div class="prezzo">€3,00</div></div>
+          <div class="descrizione" data-translate="Glass bottle 0,33 cl." data-translateIt="Vetro 0,33 cl."></div>
+        </div>
+      </div>
+
+      <div class="titolo-menu-ovale" style="width: 20vh;" data-translate="BEERS" data-translateIt="Birre"></div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pastiera.webp"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI PILS</div><div class="prezzo">(0,20cl) €3,50 / (0,40cl) €5,50</div></div>
+        <div class="descrizione" data-translate="shortcrust pastry, cooked wheat, buffalo ricotta, wildflower flavouring" data-translateIt="pastafrolla, grano cotto, ricotta di bufala, aroma millefiori"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/baba.avif"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI ROSSA</div><div class="prezzo">(0,20cl) €4,50 / (0,40cl) €6,50</div></div>
+          <div class="descrizione" data-translate="soft leavened dough with alcoholic syrup" data-translateIt="impasto soffice lievitato con bagna alcolica"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/cheesecake.jpg"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI NON FILTRATA</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
+          <div class="descrizione" data-translate="Buffalo ricotta mousse on butter biscuit filled with: berries or salted caramel or pistachio or chocolate" data-translateIt="mousse alla ricotta di bufala su biscotto al burro farcita: frutti di bosco o caramello salato o pistacchio o cioccolato"></div>
+        </div>
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/graffe.jpg"><div class="nome-prezzo"> <div class="nome-piatto">SUPERIOR ITALIAN PALE LAGER</div><div class="prezzo">(0,20cl) €4,00 / (0,40cl) €6,00</div></div>
+          <div class="descrizione" data-translate="freshly fried donut covered in sugar filled: Nutella or pistachio" data-translateIt="ciambella fritta al momento ricoperta di zucchero farcita: nutella o pistacchio"></div>
+        </div>
+      </div>
+      <div class="riga-piatti">
+        <div class="piatto"><img class="immagine-piatto" src="./Assets/Images/pastiera.webp"><div class="nome-prezzo"> <div class="nome-piatto">DOLOMITI SUPERIOR</div><div class="prezzo">(0,33) €4,50</div></div>
+        <div class="descrizione" data-translate="shortcrust pastry, cooked wheat, buffalo ricotta, wildflower flavouring" data-translateIt="pastafrolla, grano cotto, ricotta di bufala, aroma millefiori"></div>
+        </div>
+        <div class="piatto"></div>
+        <div class="piatto"></div>
+        <div class="piatto"></div>
+      </div>
+    </div>
+    
     <footer>
       <div class="informative">
         <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
